[package]

name = "eggplant"
version = "0.0.1"
authors = ["Colin Davidson <colrdavidson@gmail.com>"]

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

[dependencies.gfx]
git = "http://github.com/gfx-rs/gfx-rs"

[dependencies.cgmath]
git = "http://github.com/bjz/cgmath-rs"

[dependencies.rust-hl-lua]
git = "https://github.com/tomaka/rust-hl-lua"
